modified index.html as masakali

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           <img src="GitHubProfile-modified.png" width="150" height="150"><br></td>
         <td>
         <h1>Palaksha Soni</h1>
-        <h3>Learner | Student | Web Developer 2.0</h3>
+        <h3>Learner | Student | Web Developer Masakali</h3>
         <hr width="250px" align="left">
         <p>Passionate Learner, knowledge seeker, enthusiast to explore the new technologies that will solve <br>
     real-life problems, dynamic to bring diversity and inclusion of women in technology, strong captaincy.</p>
